fix: 创建拾光纪条目；